--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-transition-group": "^4.4.12",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
@@ -43,8 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-transition-group": "^4.4.12"
   }
 }
