--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "customer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nidoveralis.github.io/customers",
+  "homepage": "https://nidoveralis.github.io/react-management-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
